# JarEngine

./: .gitignore  BADGES  Makefile  README.md  STATUS  core.md  pyproject.toml  test.py  tmp.md  toadd.xit  todo.xit
.je-config/: je-game.ini  je-window.ini
docs/: _config.yml  index.md
docs/_includes/: footer.html  head.html
docs/css/: customstyles.css
docs/pdfconfigs/: titlepage.html
examples/: pong.py  snake.py  stress.py
examples/.je-config/: je-engine.ini
jarengine/: __init__.py  __init__.pyi  constants.py  constants.pyi
jarengine/entities/: __init__.py  __init__.pyi  components_audio.py  components_audio.pyi  components_audios.py  components_audios.pyi  components_graphics.py  components_graphics.pyi  components_others.py  components_others.pyi  components_physics.py  components_physics.pyi  components_transforms.py  components_transforms.pyi  entity.py  entity.pyi
jarengine/entity/: __init__.py  __init__.pyi  components_audios.py  components_audios.pyi  components_graphics.py  components_graphics.pyi  components_others.py  components_others.pyi  components_physics.py  components_physics.pyi  components_transforms.py  components_transforms.pyi  entity.py  entity.pyi
jarengine/events/: __init__.py  __init__.pyi  event.py  event.pyi  keyboard.py  keyboard.pyi  manager.py  manager.pyi  mouse.py  mouse.pyi
jarengine/games/: __init__.py  __init__.pyi  game.py  game.pyi  input.py  input.pyi  systems.py  systems.pyi  window.py  window.pyi
script/: check-package  uninstall-package
sources/: __init__.py  __init__.pyi  constants.py  constants.pyi
(+247 files in other folders)
