[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarengine"
version = "1.7.4"
description = "Wrapper over PyGame providing simple ECS and easy-to-use API."
authors = [
    { name = "Nathan Jarjarbin", email = "nathan.amaraggi@epitech.eu" }
]
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"

dependencies = [
    "jarbin_toolkit_time>=0.1.2.2",
    "jarbin_toolkit_console>=0.1.2.5",
    "jarbin_toolkit_error>=0.1.6.1",
    "pygame>=2.6.1",
    "datetime==6.0"
]

classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries :: pygame",
    "Topic :: Software Development :: Version Control :: Git"
]

[project.urls]
Homepage = "https://jarjarbin-studio.github.io/JarEngine/"
Repository = "https://github.com/Jarjarbin-Studio/JarEngine/"
Issues = "https://github.com/Jarjarbin-Studio/JarEngine/issues/"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarengine*"]
exclude = [
    "*.xit",
    "assets*",
    ".je-config*",
    "perso*"
]
